fix: production deployment architecture, cation bug fix, actuator health checks, and postgresql database support